Applying several features
* Add a variable for the ES index strategy for flows.
* Improving the Packer recipe for OpenNMS, to simplify the configuration templates at runtime.